themes/timetree/assets/scss/components/_footer.scss
$mobile_footer_height: auto; // 500px;
$desktop_footer_height: 106px;
// access and copyright info below the main navigational footer
$desktop_accessrights_height: 66px;
$mobile_accessrights_height: 242px;

body > footer {
  position: relative;
  overflow: hidden; // hide svg roots if they overflow

  // apply margins/padding to containers,
  // because roots svg needs to be full width

  @include for-desktop-up {
    // height: $desktop_footer_height;
    margin: 0;
    padding: 0;

    // needs to match the grid of the timetree and leaf details panel
    display: grid;
    // reserve 32% for the panel, but limit the size of the tree portion
    grid-template-columns: calc(68% - 38px) auto;
    column-gap: 38px; // space between panel and timetree
    margin-right: 40px; // needs to match right margin outside the panel
    grid-template-areas: "nav" "logos";

    // grid-template-columns: auto $desktop_panel_width; // 410px;
    // column-gap: $column_gap; //  38px; // space between panel and timetree
  }

  nav {
    grid-area: nav;
    z-index: 2; // display on top of the svg with roots

    // use flex to space out footer links evenly
    display: flex;
    flex-direction: column;
    gap: 8px;

    margin: 29px 95px 48px;

    // limit footer nav width on larger screens
    @include for-desktop-up {
      flex-direction: row;
      width: 100%;
      max-width: 100%;
      gap: auto;
      margin: 0;
    }

    > * {
      flex-grow: 1;
    }
    // make links sufficiently large tap targets
    a {
      text-align: center;
      display: block;
      font-size: 16px;
      height: 24px;

      @include for-desktop-up {
        font-size: 18px;
        height: 48px;

        height: $desktop_footer_height;

        // vary vertical height based on position
        &:nth-child(1) {
          padding-top: calc(0.4 * #{$desktop_footer_height});
        }
        &:nth-child(2) {
          padding-top: calc(0.65 * #{$desktop_footer_height});
        }
        &:nth-child(3) {
          padding-top: calc(0.2 * #{$desktop_footer_height});
        }
        &:nth-child(4) {
          padding-top: calc(0.5 * #{$desktop_footer_height});
        }
        &:nth-child(5) {
          padding-top: calc(0.3 * #{$desktop_footer_height});
        }
      }
    }

    a,
    a:link,
    a:hover,
    a:visited {
      text-decoration: none;

      // add same text shadow as labels in the tree,
      // for visibility over the roots
      text-shadow: $nav-bg-color 0px 0px 4px;

      &[aria-current="page"] {
        font-weight: 900;
      }
    }
  }

  svg {
    grid-area: nav;
    pointer-events: none;

    @include for-mobile {
      position: absolute;
      top: 0;
    }

    @include for-desktop-up {
      position: relative;
      grid-area: nav; // Chrome complains about this
      width: 100%; /* must match the tree */
      // border: 1px solid yellow;  /* for debugging position/size *
    }
  }

  #partner-logos {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    align-items: center;
    padding: 0px;
    gap: 20px;
    margin: 0 auto 30px;
    width: 206px;

    @include for-desktop-up {
      margin-top: 0;
      width: auto;
      flex-direction: row;
      margin-right: -40px; // compensate for right margin on container
      padding-right: 16px;
      gap: 16px;
    }

    img {
      max-width: 100%;

      &[src*="naisip"] {
        height: 50px;
        aspect-ratio: 102/25;
      }
      &[src*="vizelab"] {
        height: 75px;
        aspect-ratio: 38/25;

        @include for-desktop-up {
          height: 58px;
        }
      }
      &[src*="cdh"] {
        height: 75px;
        aspect-ratio: 4/3;

        @include for-desktop-up {
          height: 55px;
        }
      }
    }
  }
}

#access-rights {
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  padding: 8px 0 18px;
  gap: 8px;
  background-color: $nav-bg-color;

  width: 100vw;
  border-top: 1px solid $offwhite;
  font-size: 0.8rem; // 16px

  @include for-desktop-up {
    font-size: 0.9rem; // 18px
    flex-direction: row;
    padding: 4px 28px;

    > * {
      margin: 12px 20px 0 0;
    }
  }

  a {
    text-decoration: none;
  }

  a[href*="accessibility"] {
    text-transform: uppercase;
    text-decoration: solid underline $offwhite 1px;
    text-underline-offset: 12px;
    @include for-mobile {
      padding: 12px 20px;
    }
  }

  #copyright {
    // width: 24.8rem; // 496px;
    white-space: nowrap;
    i {
      vertical-align: text-bottom;
    }

    @include for-desktop-up {
      margin-left: 1.4rem;
      i {
        margin-right: 0.6rem;
      }
    }
  }

  a[href*="license"] {
    img {
      width: 73px;
      height: 24px;
      vertical-align: text-bottom;
    }

    @include for-desktop-up {
      margin-left: 1rem;
    }
  }

  #version,
  #copyright,
  a[href*="license"] {
  }

  a[href^="https://princeton.edu"]
  {
    img {
      width: 150px;
      height: 42px;
      aspect-ratio: 4/3;
    }

    padding: 16px 0 0;

    @include for-desktop-up {
      padding: 0;
      margin-left: auto; // auto margin = justify item flex-end
      margin-right: 0;
    }
  }
}

